--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -608,8 +608,8 @@ header {
     opacity: .89;
   }
   .hero-area-content {
-	padding-top: 80px;
-	padding-bottom: 80px;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 .hero-para {
